--- a/share/qtvcp/screens/qtdragon_lathe/qtdragon_lathe.ui
+++ b/share/qtvcp/screens/qtdragon_lathe/qtdragon_lathe.ui
@@ -8109,6 +8109,34 @@ LOG</string>
                           <property name="autoExclusive">
                            <bool>false</bool>
                           </property>
+                          <property name="indicator_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="indicator_status_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="on_color" stdset="0">
+                           <color>
+                            <red>85</red>
+                            <green>255</green>
+                            <blue>0</blue>
+                           </color>
+                          </property>
+                          <property name="shape_option" stdset="0">
+                           <number>1</number>
+                          </property>
+                          <property name="flashIndicator" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="right_edge_offset" stdset="0">
+                           <number>4</number>
+                          </property>
+                          <property name="top_edge_offset" stdset="0">
+                           <number>5</number>
+                          </property>
+                          <property name="is_mdi_finished_status" stdset="0">
+                           <bool>true</bool>
+                          </property>
                           <property name="view_change_action" stdset="0">
                            <bool>false</bool>
                           </property>
@@ -8203,6 +8231,34 @@ LOG</string>
                           <property name="autoExclusive">
                            <bool>false</bool>
                           </property>
+                          <property name="indicator_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="indicator_status_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="on_color" stdset="0">
+                           <color>
+                            <red>85</red>
+                            <green>255</green>
+                            <blue>0</blue>
+                           </color>
+                          </property>
+                          <property name="shape_option" stdset="0">
+                           <number>1</number>
+                          </property>
+                          <property name="flashIndicator" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="right_edge_offset" stdset="0">
+                           <number>4</number>
+                          </property>
+                          <property name="top_edge_offset" stdset="0">
+                           <number>5</number>
+                          </property>
+                          <property name="is_mdi_finished_status" stdset="0">
+                           <bool>true</bool>
+                          </property>
                           <property name="view_change_action" stdset="0">
                            <bool>false</bool>
                           </property>
@@ -8293,6 +8349,34 @@ LOG</string>
                           </property>
                           <property name="autoExclusive">
                            <bool>false</bool>
+                          </property>
+                          <property name="indicator_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="indicator_status_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="on_color" stdset="0">
+                           <color>
+                            <red>85</red>
+                            <green>255</green>
+                            <blue>0</blue>
+                           </color>
+                          </property>
+                          <property name="shape_option" stdset="0">
+                           <number>1</number>
+                          </property>
+                          <property name="flashIndicator" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="right_edge_offset" stdset="0">
+                           <number>4</number>
+                          </property>
+                          <property name="top_edge_offset" stdset="0">
+                           <number>5</number>
+                          </property>
+                          <property name="is_mdi_finished_status" stdset="0">
+                           <bool>true</bool>
                           </property>
                           <property name="view_change_action" stdset="0">
                            <bool>false</bool>
@@ -8385,6 +8469,34 @@ LOG</string>
                           <property name="autoExclusive">
                            <bool>false</bool>
                           </property>
+                          <property name="indicator_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="indicator_status_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="on_color" stdset="0">
+                           <color>
+                            <red>85</red>
+                            <green>255</green>
+                            <blue>0</blue>
+                           </color>
+                          </property>
+                          <property name="shape_option" stdset="0">
+                           <number>1</number>
+                          </property>
+                          <property name="flashIndicator" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="right_edge_offset" stdset="0">
+                           <number>4</number>
+                          </property>
+                          <property name="top_edge_offset" stdset="0">
+                           <number>5</number>
+                          </property>
+                          <property name="is_mdi_finished_status" stdset="0">
+                           <bool>true</bool>
+                          </property>
                           <property name="view_change_action" stdset="0">
                            <bool>false</bool>
                           </property>
@@ -8476,6 +8588,34 @@ LOG</string>
                           <property name="autoExclusive">
                            <bool>false</bool>
                           </property>
+                          <property name="indicator_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="indicator_status_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="on_color" stdset="0">
+                           <color>
+                            <red>85</red>
+                            <green>255</green>
+                            <blue>0</blue>
+                           </color>
+                          </property>
+                          <property name="shape_option" stdset="0">
+                           <number>1</number>
+                          </property>
+                          <property name="flashIndicator" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="right_edge_offset" stdset="0">
+                           <number>4</number>
+                          </property>
+                          <property name="top_edge_offset" stdset="0">
+                           <number>5</number>
+                          </property>
+                          <property name="is_mdi_finished_status" stdset="0">
+                           <bool>true</bool>
+                          </property>
                           <property name="view_change_action" stdset="0">
                            <bool>false</bool>
                           </property>
@@ -8566,6 +8706,34 @@ LOG</string>
                           </property>
                           <property name="autoExclusive">
                            <bool>false</bool>
+                          </property>
+                          <property name="indicator_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="indicator_status_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="on_color" stdset="0">
+                           <color>
+                            <red>85</red>
+                            <green>255</green>
+                            <blue>0</blue>
+                           </color>
+                          </property>
+                          <property name="shape_option" stdset="0">
+                           <number>1</number>
+                          </property>
+                          <property name="flashIndicator" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="right_edge_offset" stdset="0">
+                           <number>4</number>
+                          </property>
+                          <property name="top_edge_offset" stdset="0">
+                           <number>5</number>
+                          </property>
+                          <property name="is_mdi_finished_status" stdset="0">
+                           <bool>true</bool>
                           </property>
                           <property name="view_change_action" stdset="0">
                            <bool>false</bool>
@@ -8664,6 +8832,34 @@ LOG</string>
                           <property name="autoRepeatInterval">
                            <number>100</number>
                           </property>
+                          <property name="indicator_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="indicator_status_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="on_color" stdset="0">
+                           <color>
+                            <red>85</red>
+                            <green>255</green>
+                            <blue>0</blue>
+                           </color>
+                          </property>
+                          <property name="shape_option" stdset="0">
+                           <number>1</number>
+                          </property>
+                          <property name="flashIndicator" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="right_edge_offset" stdset="0">
+                           <number>4</number>
+                          </property>
+                          <property name="top_edge_offset" stdset="0">
+                           <number>5</number>
+                          </property>
+                          <property name="is_mdi_finished_status" stdset="0">
+                           <bool>true</bool>
+                          </property>
                           <property name="view_change_action" stdset="0">
                            <bool>false</bool>
                           </property>
@@ -8761,6 +8957,34 @@ LOG</string>
                           <property name="autoRepeatInterval">
                            <number>100</number>
                           </property>
+                          <property name="indicator_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="indicator_status_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="on_color" stdset="0">
+                           <color>
+                            <red>85</red>
+                            <green>255</green>
+                            <blue>0</blue>
+                           </color>
+                          </property>
+                          <property name="shape_option" stdset="0">
+                           <number>1</number>
+                          </property>
+                          <property name="flashIndicator" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="right_edge_offset" stdset="0">
+                           <number>4</number>
+                          </property>
+                          <property name="top_edge_offset" stdset="0">
+                           <number>5</number>
+                          </property>
+                          <property name="is_mdi_finished_status" stdset="0">
+                           <bool>true</bool>
+                          </property>
                           <property name="view_change_action" stdset="0">
                            <bool>false</bool>
                           </property>
@@ -8852,6 +9076,34 @@ LOG</string>
                           <property name="checkable">
                            <bool>false</bool>
                           </property>
+                          <property name="indicator_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="indicator_status_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="on_color" stdset="0">
+                           <color>
+                            <red>85</red>
+                            <green>255</green>
+                            <blue>0</blue>
+                           </color>
+                          </property>
+                          <property name="shape_option" stdset="0">
+                           <number>1</number>
+                          </property>
+                          <property name="flashIndicator" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="right_edge_offset" stdset="0">
+                           <number>4</number>
+                          </property>
+                          <property name="top_edge_offset" stdset="0">
+                           <number>5</number>
+                          </property>
+                          <property name="is_mdi_finished_status" stdset="0">
+                           <bool>true</bool>
+                          </property>
                           <property name="view_change_action" stdset="0">
                            <bool>false</bool>
                           </property>
@@ -8942,6 +9194,34 @@ LOG</string>
                           </property>
                           <property name="checkable">
                            <bool>false</bool>
+                          </property>
+                          <property name="indicator_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="indicator_status_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="on_color" stdset="0">
+                           <color>
+                            <red>85</red>
+                            <green>255</green>
+                            <blue>0</blue>
+                           </color>
+                          </property>
+                          <property name="shape_option" stdset="0">
+                           <number>1</number>
+                          </property>
+                          <property name="flashIndicator" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="right_edge_offset" stdset="0">
+                           <number>4</number>
+                          </property>
+                          <property name="top_edge_offset" stdset="0">
+                           <number>5</number>
+                          </property>
+                          <property name="is_mdi_finished_status" stdset="0">
+                           <bool>true</bool>
                           </property>
                           <property name="view_change_action" stdset="0">
                            <bool>false</bool>
@@ -17934,7 +18214,7 @@ SCROLL</string>
              <number>2</number>
             </property>
             <property name="text">
-             <string>02:54:36 PM</string>
+             <string>10:08:24 PM</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignCenter</set>
