--- a/share/qtvcp/screens/qtdragon_hd_vert/qtdragon_hd_vert.ui
+++ b/share/qtvcp/screens/qtdragon_hd_vert/qtdragon_hd_vert.ui
@@ -6752,6 +6752,41 @@ LOG</string>
                    <property name="autoExclusive">
                     <bool>false</bool>
                    </property>
+                   <property name="indicator_option" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="indicator_status_option" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="on_color" stdset="0">
+                    <color>
+                     <red>85</red>
+                     <green>255</green>
+                     <blue>0</blue>
+                    </color>
+                   </property>
+                   <property name="shape_option" stdset="0">
+                    <number>1</number>
+                   </property>
+                   <property name="off_color" stdset="0">
+                    <color>
+                     <red>0</red>
+                     <green>0</green>
+                     <blue>0</blue>
+                    </color>
+                   </property>
+                   <property name="flashIndicator" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="right_edge_offset" stdset="0">
+                    <number>4</number>
+                   </property>
+                   <property name="top_edge_offset" stdset="0">
+                    <number>5</number>
+                   </property>
+                   <property name="is_mdi_finished_status" stdset="0">
+                    <bool>true</bool>
+                   </property>
                    <property name="view_change_action" stdset="0">
                     <bool>false</bool>
                    </property>
@@ -6843,6 +6878,34 @@ LOG</string>
                    <property name="autoExclusive">
                     <bool>false</bool>
                    </property>
+                   <property name="indicator_option" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="indicator_status_option" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="on_color" stdset="0">
+                    <color>
+                     <red>85</red>
+                     <green>255</green>
+                     <blue>0</blue>
+                    </color>
+                   </property>
+                   <property name="shape_option" stdset="0">
+                    <number>1</number>
+                   </property>
+                   <property name="flashIndicator" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="right_edge_offset" stdset="0">
+                    <number>4</number>
+                   </property>
+                   <property name="top_edge_offset" stdset="0">
+                    <number>5</number>
+                   </property>
+                   <property name="is_mdi_finished_status" stdset="0">
+                    <bool>true</bool>
+                   </property>
                    <property name="view_change_action" stdset="0">
                     <bool>false</bool>
                    </property>
@@ -6930,6 +6993,34 @@ LOG</string>
                    </property>
                    <property name="autoExclusive">
                     <bool>false</bool>
+                   </property>
+                   <property name="indicator_option" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="indicator_status_option" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="on_color" stdset="0">
+                    <color>
+                     <red>85</red>
+                     <green>255</green>
+                     <blue>0</blue>
+                    </color>
+                   </property>
+                   <property name="shape_option" stdset="0">
+                    <number>1</number>
+                   </property>
+                   <property name="flashIndicator" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="right_edge_offset" stdset="0">
+                    <number>4</number>
+                   </property>
+                   <property name="top_edge_offset" stdset="0">
+                    <number>5</number>
+                   </property>
+                   <property name="is_mdi_finished_status" stdset="0">
+                    <bool>true</bool>
                    </property>
                    <property name="view_change_action" stdset="0">
                     <bool>false</bool>
@@ -7019,6 +7110,31 @@ LOG</string>
                    <property name="autoExclusive">
                     <bool>false</bool>
                    </property>
+                   <property name="indicator_option" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="on_color" stdset="0">
+                    <color>
+                     <red>85</red>
+                     <green>255</green>
+                     <blue>0</blue>
+                    </color>
+                   </property>
+                   <property name="shape_option" stdset="0">
+                    <number>1</number>
+                   </property>
+                   <property name="flashIndicator" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="right_edge_offset" stdset="0">
+                    <number>4</number>
+                   </property>
+                   <property name="top_edge_offset" stdset="0">
+                    <number>5</number>
+                   </property>
+                   <property name="is_mdi_finished_status" stdset="0">
+                    <bool>true</bool>
+                   </property>
                    <property name="view_change_action" stdset="0">
                     <bool>false</bool>
                    </property>
@@ -7107,6 +7223,34 @@ LOG</string>
                    <property name="autoExclusive">
                     <bool>false</bool>
                    </property>
+                   <property name="indicator_option" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="indicator_status_option" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="on_color" stdset="0">
+                    <color>
+                     <red>85</red>
+                     <green>255</green>
+                     <blue>0</blue>
+                    </color>
+                   </property>
+                   <property name="shape_option" stdset="0">
+                    <number>1</number>
+                   </property>
+                   <property name="flashIndicator" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="right_edge_offset" stdset="0">
+                    <number>4</number>
+                   </property>
+                   <property name="top_edge_offset" stdset="0">
+                    <number>5</number>
+                   </property>
+                   <property name="is_mdi_finished_status" stdset="0">
+                    <bool>true</bool>
+                   </property>
                    <property name="view_change_action" stdset="0">
                     <bool>false</bool>
                    </property>
@@ -7194,6 +7338,34 @@ LOG</string>
                    </property>
                    <property name="autoExclusive">
                     <bool>false</bool>
+                   </property>
+                   <property name="indicator_option" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="indicator_status_option" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="on_color" stdset="0">
+                    <color>
+                     <red>85</red>
+                     <green>255</green>
+                     <blue>0</blue>
+                    </color>
+                   </property>
+                   <property name="shape_option" stdset="0">
+                    <number>1</number>
+                   </property>
+                   <property name="flashIndicator" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="right_edge_offset" stdset="0">
+                    <number>4</number>
+                   </property>
+                   <property name="top_edge_offset" stdset="0">
+                    <number>5</number>
+                   </property>
+                   <property name="is_mdi_finished_status" stdset="0">
+                    <bool>true</bool>
                    </property>
                    <property name="view_change_action" stdset="0">
                     <bool>false</bool>
@@ -7289,6 +7461,34 @@ LOG</string>
                    <property name="autoRepeatInterval">
                     <number>100</number>
                    </property>
+                   <property name="indicator_option" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="indicator_status_option" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="on_color" stdset="0">
+                    <color>
+                     <red>85</red>
+                     <green>255</green>
+                     <blue>0</blue>
+                    </color>
+                   </property>
+                   <property name="shape_option" stdset="0">
+                    <number>1</number>
+                   </property>
+                   <property name="flashIndicator" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="right_edge_offset" stdset="0">
+                    <number>4</number>
+                   </property>
+                   <property name="top_edge_offset" stdset="0">
+                    <number>5</number>
+                   </property>
+                   <property name="is_mdi_finished_status" stdset="0">
+                    <bool>true</bool>
+                   </property>
                    <property name="view_change_action" stdset="0">
                     <bool>false</bool>
                    </property>
@@ -7383,6 +7583,34 @@ LOG</string>
                    <property name="autoRepeatInterval">
                     <number>100</number>
                    </property>
+                   <property name="indicator_option" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="indicator_status_option" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="on_color" stdset="0">
+                    <color>
+                     <red>85</red>
+                     <green>255</green>
+                     <blue>0</blue>
+                    </color>
+                   </property>
+                   <property name="shape_option" stdset="0">
+                    <number>1</number>
+                   </property>
+                   <property name="flashIndicator" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="right_edge_offset" stdset="0">
+                    <number>4</number>
+                   </property>
+                   <property name="top_edge_offset" stdset="0">
+                    <number>5</number>
+                   </property>
+                   <property name="is_mdi_finished_status" stdset="0">
+                    <bool>true</bool>
+                   </property>
                    <property name="view_change_action" stdset="0">
                     <bool>false</bool>
                    </property>
@@ -7471,6 +7699,34 @@ LOG</string>
                    <property name="checkable">
                     <bool>false</bool>
                    </property>
+                   <property name="indicator_option" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="indicator_status_option" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="on_color" stdset="0">
+                    <color>
+                     <red>85</red>
+                     <green>255</green>
+                     <blue>0</blue>
+                    </color>
+                   </property>
+                   <property name="shape_option" stdset="0">
+                    <number>1</number>
+                   </property>
+                   <property name="flashIndicator" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="right_edge_offset" stdset="0">
+                    <number>4</number>
+                   </property>
+                   <property name="top_edge_offset" stdset="0">
+                    <number>5</number>
+                   </property>
+                   <property name="is_mdi_finished_status" stdset="0">
+                    <bool>true</bool>
+                   </property>
                    <property name="view_change_action" stdset="0">
                     <bool>false</bool>
                    </property>
@@ -7558,6 +7814,34 @@ LOG</string>
                    </property>
                    <property name="checkable">
                     <bool>false</bool>
+                   </property>
+                   <property name="indicator_option" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="indicator_status_option" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="on_color" stdset="0">
+                    <color>
+                     <red>85</red>
+                     <green>255</green>
+                     <blue>0</blue>
+                    </color>
+                   </property>
+                   <property name="shape_option" stdset="0">
+                    <number>1</number>
+                   </property>
+                   <property name="flashIndicator" stdset="0">
+                    <bool>true</bool>
+                   </property>
+                   <property name="right_edge_offset" stdset="0">
+                    <number>4</number>
+                   </property>
+                   <property name="top_edge_offset" stdset="0">
+                    <number>5</number>
+                   </property>
+                   <property name="is_mdi_finished_status" stdset="0">
+                    <bool>true</bool>
                    </property>
                    <property name="view_change_action" stdset="0">
                     <bool>false</bool>
@@ -17583,7 +17867,7 @@ SCROLL</string>
          <number>2</number>
         </property>
         <property name="text">
-         <string>06:33:57 PM</string>
+         <string>10:05:54 PM</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
